# PDT_Projects

GDPR_DataMasking/: streamlit_app.py
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/: CHANGELOG.md  README-default.md  README.md  pyproject.toml  update_dagster_shared_components.ps1
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/cicd_scripts/: parse_toml.py  update_toml_and_packages.py
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/de_dagster_fhacombinedscrape_etl/: __init__.py
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/de_dagster_fhacombinedscrape_etl/assets/: SnowflakeConnectionHandler.py  __init__.py  assets.py  fakeDataSuite.py
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/de_dagster_fhacombinedscrape_etl/de_group_resources/: __init__.py
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/de_dagster_fhacombinedscrape_etl/de_group_sensors/: asset_updated_sensor.py  email_on_run_failure.py  s3_file_sensor.py  slack_on_failure_sensor.py  slack_on_success_sensor.py
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/de_dagster_fhacombinedscrape_etl/project_resources/: __init__.py  entrypoint.sh
GDPR_DataMasking/DagLoader/de-dagster-fhacombinedscrape-etl/de_dagster_fhacombinedscrape_etl/project_sensors/: __init__.py
PDT/: TempDifferential_LinearRegression.py
PDT/Data Science from Scratch/: CongressExample.py  DecisionTree.py  DeepLearning.py  GradientDescent.py  LinearRegression.py  LogRegression.py  MultipleRegression.py  NaturalLanguageProcessing.py  NeuralNetwork.py  (+7 more)
(+11 files in other folders)
